# Feedoscope

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  architecture.d2  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  dev_logging.conf  logging.conf  program.md  pyproject.toml  results.md  run.sh
.vectorcode/: vectorcode.include
custom_logging/: __init__.py  color_formatter.py
db/migrations/: 000001_time_sensitivity.down.sql  000001_time_sensitivity.up.sql  000002_time_sensitivity_simplified.down.sql  000002_time_sensitivity_simplified.up.sql  000003_urgency_inference.down.sql  000003_urgency_inference.up.sql  000004_relevance_embeddings.down.sql  000004_relevance_embeddings.up.sql  000005_urgency_inference_model_key.down.sql  000005_urgency_inference_model_key.up.sql
docs/: README.md  model-eval-history.md  relevance-embedding-cache.md  urgency-embedding-backend.md  urgency-karpathy-loop.md
feedoscope/: config.py  entities.py  eval_models.py  infer.py  infer_simpler_time_sensitivity.py  infer_time_sensitivity.py  llm_infer.py  llm_infer_urgency.py  llm_learn.py  llm_learn_urgency.py  main.py  mlr.py  models.py  oneclass.py  pu_learn.py  relevance_embedding.py  relevance_text.py  test_mistral.py  urgency_embedding.py  utils.py
feedoscope/data_registry/: data_registry.py
feedoscope/data_registry/sql/: ensure_urgency_user_tags.sql  get_articles.sql  get_articles_with_simplified_time_sensitivity.sql  get_articles_wo_simplified_time_sensitivity.sql  get_articles_wo_urgency_inference.sql  get_old_unread_articles.sql  get_previous_days_no_time_sensitivity_articles.sql  get_previous_days_unread_articles.sql  get_previous_days_wo_time_sensitivity_articles.sql  get_published_articles.sql  get_read_articles_training.sql  get_read_articles_with_urgency_tags.sql  get_relevance_embeddings.sql  get_sample_good.sql  get_sample_not_good.sql  get_unread_articles.sql  get_unread_articles_training.sql  insert_model_eval.sql  (+9 more)
feedoscope/relevance_experiments/: __init__.py  export_snapshot.py  harness.py
feedoscope/urgency_experiments/: __init__.py  export_snapshot.py  harness.py  metrics.py
plans/: embedding-next-wave-plan.md  ettin-migration-plan.md  eval-job-plan.md  master-comparison-branches-plan.md  master-embeddinggemma-migration-plan.md  model-evals-table-plan.md  relevance-autoresearch-loop-plan.md  relevance-next-loop-refresh-plan.md  relevance-pgvector-cache-plan.md  relevance-prod-validation-branches-plan.md  urgency-embeddinggemma-migration-plan.md  urgency-karpathy-loop-plan.md
(+1 files in other folders)
