[project]
name = "feedoscope"
version = "0.1.0"
description = ""
authors = [
    {name = "JPFrancoia",email = "jeanpatrick.francoia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "transformers[torch] (>=4.53.0,<5.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "clean-text[gpl] (>=0.6.0,<0.7.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "evaluate (>=0.4.4,<0.5.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pulearn (>=0.0.11,<0.0.12)",
    "joblib (>=1.5.1,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^9.2.0"
black = "*"
mypy = "*"
pre-commit = "*"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
