[project]
name = "feedoscope"
version = "0.1.0"
description = "A tool to assign a pertinence score to RSS articles extracted from tt-rss."
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "clean-text[gpl] (>=0.6.0,<0.7.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "evaluate>=0.4.5",
    "datasets>=4.0.0",
    "transformers[torch] (>=4.53.0,<5.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "pulearn (>=0.0.11,<0.0.12)",
    "pandas>=2.3.1",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "isort>=6.0.1",
    "microsoft-python-type-stubs",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "types-tqdm>=4.67.0.20250516",
]
train = [
    "transformers[torch]>=4.55.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[tool.isort]
# Make isort compatible with black
profile = "black"
# Additional custom settings
force_sort_within_sections = true
default_section = "THIRDPARTY"
# Add own libraries here
#known_first_party=
# When not using relative imports, add local package here
known_localproject = ["tests", "custom_logging", "feedoscope"]
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALPROJECT", "LOCALFOLDER"]
